--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: _book
 
 book:
-  title: "数据挖掘与机器学习课程讲义"
+  title: "金融科技概论讲义（机器学习部分）"
   author: "汪小圈" # 请替换为您的姓名
   date: last-modified
   chapters:
